# ada-wiki

./: .gitignore  .readthedocs.yml  .spdxtool  Makefile  Makefile.conf.in  Makefile.defaults  Makefile.in  NEWS  NEWS.md  NOTICE.txt  README  README.md  alire.toml  configure  configure.ac  coverage.sh  mkdocs.yml  samples.gpr.in  support.gpr  wiki.gpr.in  wiki_tests.gpr.in  wikiada.gpr  wikiada.gpr.in  wikiada_config.gpr  wikiada_tests.gpr  wikiada_tests.gpr.in
.alire/: wikiada.gpr  wikiada_config.gpr
debian/: ada_libraries  changelog  control  copyright  examples.gpr  libwikiada-doc.doc-base.ada-wiki-guide  libwikiada-doc.docs  rules
distrib/: wiki.gpr.in
docs/: Installation.md  Tutorial.md  Wiki.md  index.md  title.md
regtests/: alire.toml  wiki-filters-html-tests.adb  wiki-filters-html-tests.ads  wiki-html_parser-tests.adb  wiki-parsers-tests.adb  wiki-parsers-tests.ads  wiki-tests.adb  wiki-tests.ads  wiki-testsuite.adb  wiki-testsuite.ads  wiki-writers-tests.adb  wiki-writers-tests.ads  wiki_harness.adb  wikiada_tests.gpr
regtests/expect/samples/: article-2-creole.html  article-2-dotclear.html  article-2-markdown.html  article-2-mediawiki.html  article-2-textile.html  article-2.creole  article-2.dotclear  article-2.textile  convert-article-2.creole  convert-article-2.dotclear  convert-article-2.markdown  convert-article-2.md  convert-article-2.mediawiki  convert-article-2.textile  words-article-2-creole.txt  words-article-2-dotclear.txt  words-article-2-markdown.txt  words-article-2-mediawiki.txt  words-article-2-textile.txt
regtests/expect/wiki-collect/: Dynamo.wiki  autolink.markdown  autolink.mediawiki  big.mediawiki  blockquote-1.md  bold-html.markdown  bold.markdown  break.dotclear  bug-1.dotclear  chars.mediawiki  citation.dotclear  code-2.creole  code-2.markdown  code.wiki  condition-1.mediawiki  condition-2.mediawiki  definition-1.mediawiki  definition-1.textile  definition-2.mediawiki  definition.mediawiki  dos-1.markdown  emphasis.markdown  escape-2.markdown  escape-3.markdown  escape.dotclear  escape.markdown  header.dotclear  headers.mediawiki  hr-rule.dotclear  hr-rule.mediawiki  html-attr-multiline.markdown  html-attr.mediawiki  html-b.dotclear  html-close.mediawiki  html-comment.mediawiki  html-div.dotclear  html-div.mediawiki  html-error-1.mediawiki  html-error-3.mediawiki  html-error-4.mediawiki  (+80 more)
regtests/expect/wiki-convert/: bold.dotclear  bold.mediawiki  bold.textile  break.creole  break.dotclear  break.markdown  break.mediawiki  break.textile  header.creole  header.dotclear  header.markdown  header.mediawiki  header.textile  hr.creole  hr.textile  img.creole  img.dotclear  img.markdown  img.mediawiki  img.textile  link.creole  link.dotclear  link.markdown  link.mediawiki  list-2.creole  list-2.dotclear  list-2.markdown  list-2.mediawiki  list-2.textile  list.creole  list.dotclear  list.mediawiki  list.textile  pre.creole  pre.dotclear  pre.markdown  pre.mediawiki  pre.textile  superscript.creole  superscript.mediawiki  (+6 more)
regtests/expect/wiki-html/: Dynamo.wiki  autolink.markdown  autolink.mediawiki  big.mediawiki  block.mediawiki  blockquote-1.md  bold-html.markdown  bold.markdown  break.dotclear  break.markdown  bug-1.dotclear  chars.mediawiki  citation.dotclear  code-2.creole  code-2.markdown  code.creole  code.dotclear  code.markdown  code.textile  condition-1.mediawiki  condition-2.mediawiki  definition-1.mediawiki  definition-1.textile  definition-2.mediawiki  definition.mediawiki  dos-1.markdown  emphasis.markdown  ent.markdown  escape-2.markdown  escape-3.markdown  escape.creole  escape.dotclear  escape.markdown  header.dotclear  headers.mediawiki  hr-rule.dotclear  hr-rule.mediawiki  html-attr-multiline.markdown  html-attr.mediawiki  html-b.dotclear  (+104 more)
regtests/expect/wiki-import/: article-2.markdown  article-2.mediawiki  article-2.txt  article.creole  article.dotclear  article.markdown  article.mediawiki  article.txt  blockquote-2.creole  blockquote-2.markdown  blockquote-2.mediawiki  blockquote-2.txt  blockquote.creole  blockquote.dotclear  blockquote.markdown  blockquote.mediawiki  blockquote.txt  bold.creole  bold.dotclear  bold.markdown  bold.mediawiki  bold.txt  br.creole  br.dotclear  br.markdown  br.mediawiki  br.txt  comment.creole  comment.dotclear  comment.markdown  comment.mediawiki  comment.txt  entities-2.creole  entities-2.dotclear  entities-2.markdown  entities-2.mediawiki  entities-2.txt  entities-3.creole  entities-3.dotclear  entities-3.markdown  (+115 more)
regtests/files/html/: article.html  (+35 more)
regtests/src/: wiki-commonmark_tests.adb  wiki-commonmark_tests.ads  wiki-filters-html-tests.adb  wiki-filters-html-tests.ads  wiki-html_parser-tests.adb  wiki-html_parser-tests.ads  wiki-parsers-tests.adb  wiki-parsers-tests.ads  wiki-samples_tests.adb  wiki-samples_tests.ads  wiki-tests.adb  wiki-tests.ads  wiki-testsuite.adb  wiki-testsuite.ads  wiki_harness.adb
samples/: alire.toml  convert.adb  import.adb  render.adb  samples.gpr  words.adb
samples/src/: convert.adb  import.adb  render.adb  words.adb
src/: wiki-attributes.adb  wiki-attributes.ads  wiki-buffers.adb  wiki-buffers.ads  wiki-documents.adb  wiki-documents.ads  wiki-filters-autolink.adb  wiki-filters-autolink.ads  wiki-filters-collectors.adb  wiki-filters-collectors.ads  wiki-filters-html.adb  wiki-filters-html.ads  wiki-filters-toc.adb  wiki-filters-toc.ads  wiki-filters-variables.adb  wiki-filters-variables.ads  wiki-filters.adb  wiki-filters.ads  wiki-helpers-parser.adb  wiki-helpers-parser.ads  wiki-helpers.adb  wiki-helpers.ads  wiki-html_parser-entities.ads  wiki-html_parser.adb  wiki-html_parser.ads  wiki-nodes-dump.adb  wiki-nodes-dump.ads  wiki-nodes-lists.adb  wiki-nodes-lists.ads  wiki-nodes.adb  wiki-nodes.ads  wiki-parsers-common.adb  wiki-parsers-common.ads  wiki-parsers-creole.adb  wiki-parsers-creole.ads  wiki-parsers-dotclear.adb  wiki-parsers-dotclear.ads  wiki-parsers-google.adb  wiki-parsers-google.ads  wiki-parsers-html-entities.ads  (+54 more)
support/: alire.toml  gen-ada-entities.pl  genentities.adb  special.ent  support.gpr
support/src/: genentities.adb
(+285 files in other folders)
